--- a/main.html
+++ b/main.html
@@ -1,3 +1,46 @@
-<html>
-  <h1>내용<h1>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minecraft 서버 소개</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            text-align: center;
+        }
+        p {
+            line-height: 1.6;
+        }
+        .server-info {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>환영합니다! 우리의 마인크래프트 서버에 오신 것을 환영합니다!</h1>
+        <div class="server-info">
+            <h2>서버 정보:</h2>
+            <p>이 서버는 놀라운 모험과 창조의 세계를 제공합니다.</p>
+            <p>버전: 1.17.1</p>
+            <p>서버 주소: <strong>play.myserver.com</strong></p>
+            <p>서버에 참여하려면 마인크래프트 클라이언트에서 위 주소로 접속해주세요.</p>
+            <p>우리 서버에는 다양한 활동과 이벤트가 기다리고 있으니 함께하시길 바랍니다!</p>
+        </div>
+    </div>
+</body>
+</html>
