--- a/Public_html/main.html
+++ b/Public_html/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +36,7 @@
         <div class="server-info">
             <h2>서버 정보:</h2>
             <p>이 서버는 놀라운 모험과 창조의 세계를 제공합니다.</p>
-            <p>버전: 1.17.1</p>
+            <p>버전: 1.20.4</p>
             <p>서버 주소: <strong>play.myserver.com</strong></p>
             <p>서버에 참여하려면 마인크래프트 클라이언트에서 위 주소로 접속해주세요.</p>
             <p>우리 서버에는 다양한 활동과 이벤트가 기다리고 있으니 함께하시길 바랍니다!</p>
