--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
             <h2>서버 정보:</h2>
             <p>이 서버는 놀라운 모험과 창조의 세계를 제공합니다.</p>
             <p>버전: 1.20.4</p>
-            <p>서버 주소: <strong>play.myserver.com</strong></p>
+            <p>서버 주소: <strong>projectmcrr.mcv.kr</strong></p>
             <p>서버에 참여하려면 마인크래프트 클라이언트에서 위 주소로 접속해주세요.</p>
             <p>우리 서버에는 다양한 활동과 이벤트가 기다리고 있으니 함께하시길 바랍니다!</p>
         </div>
