--- a/main.html
+++ b/main.html
@@ -35,11 +35,13 @@
         <h1>환영합니다! 우리의 마인크래프트 서버에 오신 것을 환영합니다!</h1>
         <div class="server-info">
             <h2>서버 정보:</h2>
-            <p>이 서버는 놀라운 모험과 창조의 세계를 제공합니다.</p>
+            <p>이 서버는 서버 관리진이 직접만든 정치 플러그인을 통해 현실적인 서버를 구축하였습니다!</p>
             <p>버전: 1.20.4</p>
             <p>서버 주소: <strong>projectmcrr.mcv.kr</strong></p>
             <p>서버에 참여하려면 마인크래프트 클라이언트에서 위 주소로 접속해주세요.</p>
             <p>우리 서버에는 다양한 활동과 이벤트가 기다리고 있으니 함께하시길 바랍니다!</p>
+            <p>좋은 하루 보내세요!</p>
+            <p>서버에 참여하시려면 디스코드 링크를 클릭하여 인증하셔야합니다.. https://discord.gg/BRRPjzFtzB</p>
         </div>
     </div>
 </body>
